--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -2,8 +2,8 @@ db.driver=com.mysql.cj.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/spring_hiber?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 db.username=root
 db.password=root
+db.entity.package=web.model
 
 hibernate.format_sql=true
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
-hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
